# ide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.js  package-lock.json  package.json  preload.js  tsconfig.json
IDE/: CMakeLists.txt  IDE.h  pch.h
IDE/Core/: Application.cpp  Application.h
IDE/Core/ImGui/: DemoPanel.cpp  DemoPanel.h  Dockspace.cpp  Dockspace.h  Filesystem.cpp  Filesystem.h  IPanel.h  ImGuiLayer.cpp  ImGuiLayer.h  Menu.cpp  Menu.h  MenuPanel.cpp  MenuPanel.h  PanelStack.cpp  PanelStack.h  Terminal.cpp  Terminal.h  TextEditor.cpp  TextEditor.h
IDE/Core/Panels/: DemoPanel.cpp  DemoPanel.h  Dockspace.cpp  Dockspace.h  IPanel.h  LauncherPanel.cpp  LauncherPanel.h  MenuPanel.cpp  MenuPanel.h  PanelStack.cpp  PanelStack.h
IDE/Core/Window/: Window.cpp  Window.h
IDE/Entry/: main.cpp
Resources/Icons/: icon.rc
docs/: index.html  renderer.js  styles.css
docs/scripts/: activity.js  constants.js  filesystem.js  icons.js  terminal.js  windowControls.js
public/: index.html
renderer/: index.html  renderer.js  style.css  styles.css
src/: main.ts
